# tbmail

./: .gitignore  README.md  pyproject.toml
static/: index.html  link.html  link.js  recover.html  recover.js  style.css
tbmail/: __init__.py  api.py  database.py  mail.py  server.py  user.py
