[tool.poetry]
name = "tbmail"
version = "0.1.0"
description = ""
authors = ["mewhenthe <xsare435@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
trollbot = "^1.2"
requests = "^2.32.3"
bcrypt = "^4.2.1"
fastapi = "0.109.0"
uvicorn = "0.27.0.post1"

[tool.poetry.scripts]
tbmail = "tbmail:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
